attached_assets/Pasted--src-main-java-ui-SwingGUI-java-37-error-cannot-find-symbol-curso-setProfessor-professor-1749437513094_1749437513095.txt
./src/main/java/ui/SwingGUI.java:37: error: cannot find symbol
        curso.setProfessor(professor);
             ^
  symbol:   method setProfessor(Professor)
  location: variable curso of type Curso
./src/main/java/ui/SwingGUI.java:38: error: cannot find symbol
        curso2.setProfessor(professor2);
              ^
  symbol:   method setProfessor(Professor)
  location: variable curso2 of type Curso
./src/main/java/ui/SwingGUI.java:183: error: method getProfessor in class Curso cannot be applied to given types;
        sb.append("Professor: ").append(cursoSelecionado.getProfessor().getNome()).append("\n");
                                                        ^
  required: String
  found:    no arguments
  reason: actual and formal argument lists differ in length
./src/main/java/ui/SwingGUI.java:184: error: method getProfessor in class Curso cannot be applied to given types;
        sb.append("Especialidade: ").append(cursoSelecionado.getProfessor().getEspecilidade()).append("\n");
                                                            ^
  required: String
  found:    no arguments
  reason: actual and formal argument lists differ in length
./src/main/java/ui/SwingGUI.java:192: error: method getProfessor in class Curso cannot be applied to given types;
        sb.append("Professor: ").append(cursoSelecionado.getProfessor().getNome()).append("\n\n");
                                                        ^
  required: String
  found:    no arguments
  reason: actual and formal argument lists differ in length
./src/main/java/ui/Main.java:201: error: method getProfessor in class Curso cannot be applied to given types;
                Professor professorCurso = cursoEscolhido.getProfessor();
                                                         ^
  required: String
  found:    no arguments
  reason: actual and formal argument lists differ in length
./src/main/java/persistence/Persistence.java:134: error: method getProfessor in class Curso cannot be applied to given types;
                Professor professor = curso.getProfessor();
                                           ^
  required: String
  found:    no arguments
  reason: actual and formal argument lists differ in length
7 errors